[docs] Fix homepage on Safari

--- a/site/less/home.less
+++ b/site/less/home.less
@@ -209,9 +209,9 @@ body > main > article#home {
     span#one-with {
       margin: 0;
       text-align: left;
-      transform: rotate(-7deg) translate(-3rem, -1rem);
+      transform: rotate(-5deg) translate3d(-3rem, -1rem, 0);
       &:before {
-        content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="1rem" viewBox="0 0 200 100" stroke-width="10" stroke="rgb(216,27,96)" fill="rgb(216,27,96)"><path fill="none" d="M25 70a120 120 0 00160-50"/><path d="M30.26 54.095l-18.91 6.512 6.511 18.91z"/></svg>');
+        content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 200 100" stroke-width="10" stroke="rgb(216,27,96)" fill="rgb(216,27,96)"><path fill="none" d="M25 70a120 120 0 00160-50"/><path d="M30.26 54.095l-18.91 6.512 6.511 18.91z"/></svg>');
         top: 0.9rem;
         position: relative;
         margin-right: 0.6rem;
